# cairo-contracts

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .markdownlintrc  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  RELEASING.md  SECURITY.md  Scarb.toml  _typos.toml  codecov.yml  key.txt  netlify.toml  node.json  rsa.key  secret.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: actionlint.yml  benchmark-diff-comment.yml  benchmark-diff-pr.yml  class-hash.yml  coverage.yml  prepare-release.yml  prepare-testing-release.yml  python-app.yml  release.yml  test-macros.yml  test.yml  typos.yaml  version-bump.yml  version.yml
audits/: README.md
benches/: contract_sizes.json
contracts/: Account.cairo  Account_base.cairo  AddressRegistry.cairo  ERC165.cairo  ERC165_base.cairo  ERC20.cairo  IAccount.cairo  IERC165.cairo  Initializable.cairo  Ownable.cairo  Ownable_base.cairo  Pausable.cairo  Pausable_base.cairo  Proxy.cairo  Self.cairo  contract.cairo  test.cairo
contracts/account/: Account_v0.cairo  Account_v1.cairo  Account_v2.cairo  Account_v3.cairo
contracts/proxy/: Proxy.cairo  library.cairo
contracts/token/: ERC1155.cairo  ERC1155_base.cairo  ERC20.cairo  ERC20_Mintable.cairo  ERC20_Pausable.cairo  ERC20_Upgradeable.cairo  ERC20_base.cairo  ERC721.cairo  ERC721_Enumerable.cairo  ERC721_Enumerable_Mintable_Burnable.cairo  ERC721_Enumerable_base.cairo  ERC721_Metadata.cairo  ERC721_Metadata_base.cairo  ERC721_Mintable.cairo  ERC721_Mintable_Burnable.cairo  ERC721_Mintable_Pausable.cairo  ERC721_Pausable.cairo  ERC721_base.cairo  IERC1155.cairo  IERC20.cairo  IERC721.cairo  IERC721_Enumerable.cairo  IERC721_Metadata.cairo  IERC721_Receiver.cairo
contracts/utils/: Uint256_Checked.cairo  Uint256_Checked_base.cairo  constants.cairo  safemath.cairo  (+2 more)
docs/: Access.md  Account.md  ERC20.md  ERC721.md  EnumerableSetAndMap.md  Extensibility.md  Introspection.md  Proxies.md  Proxy.md  Security.md  Timelock.md  Upgrades.md  Utilities.md  antora.yml  package-lock.json  package.json
nile/: clean.py  compile.py  config.py  install.py
openzeppelin/: Account.cairo  ERC165.cairo  ERC165_base.cairo  Ownable.cairo  Pausable_base.cairo
scripts/: benchmark.py  benchmark_diff.py  compile.py  config.py  get_hashes_page.py  get_presets_page.py  update_readme_links.py  update_version.py
sncast_scripts/: Scarb.toml
src/: access.cairo  account.cairo  cairo_project.toml  finance.cairo  governance.cairo  introspection.cairo  lib.cairo  presets.cairo  security.cairo  tests.cairo  token.cairo  upgrades.cairo  utils.cairo
test/: Account.py  AddressRegistry.py  ERC1155.py  ERC20.py  Initializable.py  Ownable.py  utils.py
tests/: ERC1155.py  conftest.py  signers.py  test_Account.py  test_AddressRegistry.py  test_ERC1155.py  test_ERC165.py  test_ERC20.py  test_ERC20_Burnable_mock.py  test_ERC20_Mintable.py  test_ERC20_Pausable.py  test_ERC20_Upgradeable.py  test_ERC721.py  test_ERC721_Enumerable.py  test_ERC721_Enumerable_Mintable_Burnable.py  test_ERC721_Metadata.py  test_ERC721_Mintable.py  test_ERC721_Mintable_Burnable.py  test_ERC721_Mintable_Pausable.py  test_ERC721_Pausable.py  test_Initializable.py  test_Ownable.py  test_Proxy.py  test_SafeMintable_mock.py  test_Uint256_Checked.py  test_extensibility.py  test_safemath.py  test_signers.py  test_uint256_checked.py  utils.py
(+837 files in other folders)
